--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
 							<li>
 								<a href="#" class="icon fa-angle-down">Projects</a>
 								<ul>
+									<li><a href="ARNavigation.html">AR Navigation</a></li>
+									<li><a href="WhoMatters.html">Who Matters</a></li>
+									<li><a href="VUI.html">Charles Bot</a></li>
+									<li><a href="HopeEnglish.html">Usability Evaluation</a></li>
+									<li><a href="Insightgram.html">Insight-gram</a></li>
 									<li><a href="KE.html">Knowledge Explorer</a></li>
 									<li><a href="Meteore.html">Météore</a></li>
-									<li><a href="WhoMatters.html">Who Matters</a></li>
-									<li><a href="Insightgram.html">Insight-gram</a></li>
-									<li><a href="HopeEnglish.html">Usability Evaluation</a></li>
-									<li><a href="VUI.html">Charles Bot</a></li>
 								</ul>
 							</li>
 							<li><a href="#" class="button">繁體中文</a></li>
@@ -53,7 +54,7 @@
 						<header class="major">
 							<h2>Building a world that brings us closer <br>to each other,and to ourselves.</h2>
 							<p> Engineer | Researcher | Designer of Human-Computer Interaction</p>
-							<p><img class="image left round2" src="images/profile.jpg" alt=""/> Though old saying "Technology Humanity", do the technologies nowadays bring more humanity to us? AI and ML allows computers to reach further, but how could we really use these breakthroughs to enrich people? I place myself in the gap between technology and humanity, my mission is to augment human with the technology, as well as with the deep understanding and concerning of humanity.
+							<p><img class="image left round2" src="images/profile.jpg" alt=""/> Though old saying "Technology Humanity", do the technologies nowadays bring more humanity to us? AI and ML allows computers to reach further, but how could we really use these breakthroughs to enrich people? I place myself in the gap between technology and humanity, my mission is <font color="#e89980">to augment human with the technology, as well as with the deep understanding and concerning of humanity.</font>
 							</p>
 							<ul class="icons">
 								<li><a style="font-size: 2em;" class="icon">Contact Me @</a></li>
@@ -115,39 +116,19 @@
 						</header>
 					</div>
 
-					<div class="row">
-						<div class="col-6 col-12-narrower">
+					<!--div class="box-little" style="background-image: url('images/pic01.jpg')" id="Portfolio">
+						<header class="major">
+							<h2 style="color: #ffffff;">2018</h2>
+						</header>
+					</div-->
 
-							<section class="box special">
-								<span class="image featured"><img height="250" src="images/Meteore.png" alt="" /></span>
-								<h3>Météore</h3>
-								<p>Project Background : Course Project<br>Project semester : 2016 Fall<br>Community makes a small action BIG.<br>We design a social platform that everyone owns a planet in the galaxy. Users generated their individual or public goals and share them to the community...
-								<ul class="actions special">
-									<li><a href="Meteore.html" class="button alt">Learn More</a></li>
-								</ul>
-							</section>
-
-						</div>
-						<div class="col-6 col-12-narrower">
-
-							<section class="box special">
-								<span class="image featured"><img height="250" src="images/KEConcept.png" alt="" /></span>
-								<h3>Knowledge Explorer</h3>
-								<p>Project Background : Course Project<br>Project date : 2017 Fall<br>Project supervisor : Dr. Hao-Chuan Wang<br>ACollaborative Concept Mapping System for Improving Online How-To Knowledge Transfer.<br>Imagine a scenario that you are searching for tutorial...</p>
-								<ul class="actions special">
-									<li><a href="KE.html" class="button alt">Learn More</a></li>
-								</ul>
-							</section>
-
-						</div>
-					</div>
 					<div class="row">
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
 								<span class="image featured"><img height="250" src="images/WhoMatters.png" alt="" /></span>
 								<h3>Who Matters</h3>
-								<p>Project Background : Research Project<br>Project date : 2017.12 - present<br>Project supervisor : Dr. "Stanley" Yung-Ju Chang<br>Submitted to CHI’19<br>Understanding the Impact of Relationship Characteristics on Receptivity to Mobile IM Messages.<br></p>
+								<p><b>Project Background : </b>Research Project<br><b>Project date : </b>2017.12 - present<br><b>Project supervisor : </b>Dr. "Stanley" Yung-Ju Chang<br><b>Submitted to CHI’19</b><br>Understanding the Impact of Relationship Characteristics on Receptivity to Mobile IM Messages.<br></p>
 								<ul class="actions special">
 									<li><a href="WhoMatters.html" class="button alt">Learn More</a></li>
 								</ul>
@@ -158,15 +139,16 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
-								<span class="image featured"><img height="250" src="images/InsightCover.png" alt="" /></span>
-								<h3>Insight-gram</h3>
-								<p>Project Background : Course Project<br>Project date : 2018.06<br>We crawled and extracted keywords from posts with location tags on Instagram, since trends on instagram satifies the endemic and transient characteristics. We then cluster posts with similar keywords together...</p>
+								<span class="image featured"><img height="250" src="images/VUIFront.png" alt="" /></span>
+								<h3>Charles Bot</h3>
+								<p><b>Project Background : </b>Side Project<br><b>Project date : </b>2018.4 - 2018.6<br><b>A Hands-Free, Eyes-Free Voice User Interface on Android devices</b><br>People frequently use mobile phone and constantly to stay in touch with others. With the existing method...</p>
 								<ul class="actions special">
-									<li><a href="Insightgram.html" class="button alt">Learn More</a></li>
+									<li><a href="VUI.html" class="button alt">Learn More</a></li>
 								</ul>
 							</section>
 
 						</div>
+
 					</div>
 					<div class="row">
 						<div class="col-6 col-12-narrower">
@@ -174,20 +156,49 @@
 							<section class="box special">
 								<span class="image featured"><img height="250" src="images/UsabilityImage.png" alt="" /></span>
 								<h3>User Experience and Usability Evaluation for Hope English</h3>
-								<p>Project Background : Course Project<br>Project date : 2018.2 - 2018.6 <br>Project supervisor : Hope English's CFO, Jasper Chang & Dr. "Stanley" Yung-Ju Chang<br></p>
+								<p><b>Project Background : </b>Course Project<br><b>Project date : </b>2018.2 - 2018.6 <br><b>Project supervisor :</b> Hope English's CFO, Jasper Chang & Dr. "Stanley" Yung-Ju Chang<br></p>
 								<ul class="actions special">
 									<li><a href="HopeEnglish.html" class="button alt">Learn More</a></li>
 								</ul>
 							</section>
 						</div>
+
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
-								<span class="image featured"><img height="250" src="images/VUIFront.png" alt="" /></span>
-								<h3>Charles Bot</h3>
-								<p>Project Background : Side Project<br>Project date : 2018.4 - 2018.6<br>A Hands-Free, Eyes-Free Voice User Interface on Android devices<br>People frequently use mobile phone and constantly to stay in touch with others. With the existing method...</p>
+								<span class="image featured"><img height="250" src="images/InsightCover.png" alt="" /></span>
+								<h3>Insight-gram</h3>
+								<p><b>Project Background :</b> Course Project<br><b>Project date :</b> 2018.06<br>We crawled and extracted keywords from posts with location tags on Instagram, since trends on instagram satifies the endemic and transient characteristics. We then cluster posts with similar keywords together...</p>
 								<ul class="actions special">
-									<li><a href="VUI.html" class="button alt">Learn More</a></li>
+									<li><a href="Insightgram.html" class="button alt">Learn More</a></li>
+								</ul>
+							</section>
+
+						</div>
+
+					</div>
+
+					<div class="row">
+						<div class="col-6 col-12-narrower">
+
+							<section class="box special">
+								<span class="image featured"><img height="250" src="images/KEConcept.png" alt="" /></span>
+								<h3>Knowledge Explorer</h3>
+								<p><b>Project Background :</b> Course Project<br><b>Project date :</b> 2017 Fall<br><b>Project supervisor :</b> Dr. Hao-Chuan Wang<br><b>A Collaborative Concept Mapping System for Improving Online How-To Knowledge Transfer</b><br>Imagine a scenario that you are searching for tutorial...</p>
+								<ul class="actions special">
+									<li><a href="KE.html" class="button alt">Learn More</a></li>
+								</ul>
+							</section>
+
+						</div>
+						<div class="col-6 col-12-narrower">
+
+							<section class="box special">
+								<span class="image featured"><img height="250" src="images/Meteore.png" alt="" /></span>
+								<h3>Météore</h3>
+								<p><b>Project Background :</b> Course Project<br><b>Project semester :</b> 2016 Fall<br><b>Community makes a small action BIG.</b><br>We design a social platform that everyone owns a planet in the galaxy. Users generated their individual or public goals and share them to the community...
+								<ul class="actions special">
+									<li><a href="Meteore.html" class="button alt">Learn More</a></li>
 								</ul>
 							</section>
 
