--- a/ARNavigation.html
+++ b/ARNavigation.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>ARNavi - Charles Chung</title>
+		<title>ARNavigation - Charles Chung</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -60,7 +60,7 @@
 								<p>This work is scheduled to submit to Ubicomp 2019.</p>
 							</div>
 						</div>
-						<span class="image featured"><img src="images/" alt="" /></span>
+						<span class="image featured"><img src="images/ARNavigationConcept.png" alt="" /></span>
 						<div class="row">
 							<div class="row-6 row-12-mobilep">
 								<h3>What's my role in the project</h3>
