--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<section class="box special">
 						<header class="major">
 							<h2>Building a world that brings us closer <br>to each other,and to ourselves.</h2>
-							<p> Engineer | Researcher | Designer of Human-Computer Interaction</p>
+							<p> Engineer | Researcher | Designer of User Experience</p>
 							<p><img class="image left round2" src="images/profile.jpg" alt=""/> Though old saying "Technology Humanity", do the technologies nowadays bring more humanity to us? AI and ML allows computers to reach further, but how could we really use these breakthroughs to enrich people? I place myself in the gap between technology and humanity, my mission is <font color="#e89980">to augment human with the technology, as well as with the deep understanding and concerning of humanity.</font>
 							</p>
 							<ul class="icons">
@@ -126,6 +126,22 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
+								<span class="image featured"><img height="250" src="images/ARNavigationFront.png" alt="" /></span>
+								<h3>AR Pedestrian Navigation</h3>
+								<p><b>Project Background : </b>Research Project<br><b>Project date : </b>2018.09 - present<br><b>Project supervisor : </b>Dr. Yung-Ju Chang and Dr. Hung-Kuo Chu<br>In the observation of the most widely used digital mapping navigation system -- Googole map, we found users...<br></p>
+								<ul class="actions special">
+									<li><a href="ARNavigation.html" class="button alt">Learn More</a></li>
+								</ul>
+							</section>
+
+						</div>
+
+					<!--/div>
+
+					<div class="row"-->
+						<div class="col-6 col-12-narrower">
+
+							<section class="box special">
 								<span class="image featured"><img height="250" src="images/WhoMatters.png" alt="" /></span>
 								<h3>Who Matters</h3>
 								<p><b>Project Background : </b>Research Project<br><b>Project date : </b>2017.12 - present<br><b>Project supervisor : </b>Dr. "Stanley" Yung-Ju Chang<br><b>Submitted to CHI’19</b><br>Understanding the Impact of Relationship Characteristics on Receptivity to Mobile IM Messages.<br></p>
@@ -149,8 +165,8 @@
 
 						</div>
 
-					</div>
-					<div class="row">
+					<!--/div>
+					<div class="row"-->
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
@@ -176,9 +192,9 @@
 
 						</div>
 
-					</div>
+					<!--/div>
 
-					<div class="row">
+					<div class="row"-->
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
